--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,8 +7,8 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - notes.qmd
       - about.qmd
-
 format:
   html:
     theme: cosmo
